[package]
name = "rust_functions"
version = "0.1.0"
authors = ["kiyami <kiyami_erdim@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "pyrust"
crate-type = ["cdylib"]

[dependencies.cpython]
version = "0.2.1"
features = ["extension-module"]
